--- a/GameGMD/GameGMD.csproj
+++ b/GameGMD/GameGMD.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,7 +53,12 @@
     <Compile Include="Enemies\BlueBubble.cs" />
     <Compile Include="Enemies\Dragon.cs" />
     <Compile Include="Enemies\EnemySpawner.cs" />
-    <Compile Include="EnemyPool\EnemyFactory.cs" />
+    <Compile Include="EnemyPool\EnemyPooling.cs" />
+    <Compile Include="GamePhysics\CollisionDetector.cs" />
+    <Compile Include="GamePhysics\CollisionDetector.Designer.cs">
+      <DependentUpon>CollisionDetector.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GamePhysics\SpacePartitioning.cs" />
     <Compile Include="Sparkles\BlueSparkle.cs" />
     <Compile Include="Sparkles\ISparkle.cs" />
     <Compile Include="Sparkles\WhiteSparkle.cs" />
@@ -61,8 +67,7 @@
     <Compile Include="Enemies\Octopus.cs" />
     <Compile Include="Enemies\Pinkie.cs" />
     <Compile Include="Sparkles\YellowSparkle.cs" />
-    <Compile Include="GraphicsObject.cs" />
-    <Compile Include="Input-CommandPattern\Command.cs" />
+    <Compile Include="GamePhysics\GameObject.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,11 +75,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Bullet.cs" />
-    <Compile Include="Input-CommandPattern\Fire.cs" />
-    <Compile Include="Input-CommandPattern\MoveLeft.cs" />
-    <Compile Include="Input-CommandPattern\MoveRight.cs" />
-    <Compile Include="Physics.cs" />
-    <Compile Include="PhysicsObject.cs" />
+    <Compile Include="GamePhysics\Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enemies\EnemyData.cs" />
@@ -94,6 +95,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <Compile Include="GamePhysics\Collider.cs" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
